Fixed small css issue with the x-axis overflowing

--- a/src/Css/Admin.css
+++ b/src/Css/Admin.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 h1 {
     margin-top: 1em;
 }
